integration/kubefiles/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-integration-example
  namespace: vlc-quarkus-integration
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: quarkus-integration-example
  template:
    metadata:
      labels:
        name: quarkus-integration-example
    spec:
      containers:
        - name: quarkus-integration-example
          image: quay.io/famargon/quarkus-integration-example:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 9999
            name: http
