integration/kubefiles/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-integration-example-service
  namespace: vlc-quarkus-integration
spec:
  ports:
  - name: http
    port: 9999
    protocol: TCP
    targetPort: http
  selector:
    name: quarkus-integration-example
  type: LoadBalancer
